<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.voidaspect</groupId>
    <artifactId>monval</artifactId>
    <version>1.1.2</version>
    <packaging>jar</packaging>

    <name>MonVal</name>

    <description>
        A utility to convert various data types to and from the monetary amount,
        which is represented as a 64-bit integer value
    </description>

    <url>https://github.com/VoidAspect/MonVal</url>

    <inceptionYear>2019</inceptionYear>

    <developers>
        <developer>
            <name>Mikhail Horbunov</name>
            <email>miwagorbi@gmail.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/VoidAspect/MonVal.git</connection>
        <developerConnection>scm:git:git@github.com:VoidAspect/MonVal.git</developerConnection>
        <url>https://github.com/VoidAspect/MonVal/tree/master</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub VoidAspect Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/VoidAspect/MonVal</url>
        </repository>
    </distributionManagement>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/VoidAspect/MonVal/issues</url>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <maven-test-plugins.version>3.0.0-M4</maven-test-plugins.version>
        <junit.version>5.6.0</junit.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-test-plugins.version}</version>
                <configuration>
                    <argLine>
                        --add-opens monval/com.voidaspect.monval=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-test-plugins.version}</version>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>